[gd_scene load_steps=4 format=3 uid="uid://wrec6jr764cj"]

[ext_resource type="Theme" uid="uid://b288c5n3b1ipm" path="res://MainUITheme.tres" id="1_f0r46"]
[ext_resource type="Script" uid="uid://p2dmsuykxpij" path="res://Prefabs/StringInputPopup/string_input_popup.gd" id="2_y15gy"]
[ext_resource type="Texture2D" uid="uid://y11i8jn7i7d1" path="res://Textures/cancel.png" id="3_ab8nb"]

[node name="StringInputPopup" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f0r46")
script = ExtResource("2_y15gy")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Box" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 200.0
offset_right = 500.0
offset_bottom = 608.0
grow_horizontal = 2
color = Color(0.152941, 0.152941, 0.25098, 1)

[node name="HeaderLabel" type="Label" parent="Box"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 88.0
grow_horizontal = 2
text = "PLACEHOLDER MESSAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Box"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 24.0
offset_top = 88.0
offset_right = -24.0
offset_bottom = 248.0
grow_horizontal = 2
placeholder_text = "type in ya text here"

[node name="SubmitButton" type="Button" parent="Box"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -476.0
offset_top = 264.0
offset_right = 476.0
offset_bottom = 384.0
grow_horizontal = 2
text = "Submit"

[node name="CloseButton" type="TextureButton" parent="Box"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_top = -32.0
offset_right = 24.0
offset_bottom = 88.0
grow_horizontal = 0
texture_normal = ExtResource("3_ab8nb")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="Box/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="Box/CloseButton" to="." method="_on_close_button_pressed"]
